Fixed layout issues with clear button

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ nav {
   font-weight: 700;
   color: white;
   background-color: hsl(180, 29%, 50%);
-  padding: 0.6rem 0.5rem 0.55rem 0.3rem;
+  padding: 0.55rem 0.5rem 0.55rem 0.3rem;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   /* margin-right: 0.3rem; */
